[project]
name = "jupyter-vscode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nump>=5.5.5.5",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]

[tool.ruff]
target-version = "py312"
line-length = 88

# Include Jupyter notebooks
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]

# Ignore specific rules for notebooks
[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",  # Module imports not at top
    "E501",  # Line too long (common in notebooks)
    "F401",  # Unused imports (often used later in notebooks)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
